# bytesmith

./: .gitmodules  .lazy.lua  AGENTS.md  Cargo.toml  LICENSE-MIT  PARSING_LIBRARY_REQUIREMENTS.md  README.md  TODO.md  implementation_plan.md  instructions.md  syntax_spec.md
binparse/: Cargo.toml
binparse-bench/: Cargo.toml
binparse-bench/benches/: dns.rs  mqtt.rs  network.rs  tls.rs
binparse-bench/comparison/: analyze_callgrind.sh  dns_binparse.rs  dns_simpledns.rs
binparse-cli/: Cargo.toml
binparse-cli/src/: main.rs
binparse-codegen/: Cargo.toml
binparse-codegen/examples/: array.rs  conditional.rs  constraint.rs  gen_stdin.rs  test.rs
binparse-codegen/src/: analyze.rs  attr.rs  context.rs  expr.rs  field.rs  lib.rs  struct_.rs  tests.rs  writer.rs
binparse-codegen/src/tests/: fields.rs  hooks.rs  len_bounds.rs  mod.rs  primitives.rs  unions.rs  writer.rs  writer_snapshots.rs
binparse-codegen/src/tests/snapshots/: bitfield_array.txt  bitfields.txt  cache_len_hook.txt  cache_len_value_hook.txt  cache_value_hook.txt  check_and_range.txt  concat.txt  conditional_fields.txt  conditional_hook.txt  constant_fields.txt  cross_byte_bitfield.txt  empty_struct.txt  endian_attributes.txt  expression_sized_array.txt  fixed_array.txt  fixed_hook.txt  greedy_rest_array.txt  len_bounded_greedy_array.txt  len_bounded_hook.txt  len_bounded_struct_ref.txt  len_bounded_union.txt  lsb_bit_order.txt  nested_structs.txt  padding_and_alignment.txt  signed_primitives.txt  simple_primitive.txt  skip_fields.txt  struct_level_len.txt  struct_level_len_fill_to_bound.txt  struct_ref_array.txt  union_error_variant.txt  union_single_discriminant.txt  union_tuple_discriminant_with_multiple_matchers.txt  until_array.txt  vla_hook.txt  writer_affine_dynamic_tail.txt  writer_align.txt  writer_bitfields.txt  writer_byte_array.txt  writer_concat.txt  (+27 more)
binparse-codegen/src/type_/: array.rs  bitfield.rs  concat.rs  mod.rs  primitive.rs  struct_ref.rs  union_.rs
binparse-codegen/tests/: generated_runtime.rs  hook_integration.rs  pcap_dogfood.rs  protocol_suite.rs  test_attributes.rs  test_bitfield_arrays.rs  test_concat.rs  test_error_enum.rs  test_union.rs  writer_protocol_suite.rs  writer_runtime.rs
binparse-codegen/tests/snapshots/: arp.txt  ethernet.txt  icmpv4.txt  ipv4.txt  ipv4_truncated.txt  tcp_options.txt  tls_record.txt  tls_stream.txt  udp.txt  vlan.txt
binparse-dsl/: Cargo.toml
binparse-dsl-parse/: Cargo.toml
binparse-dsl-parse/src/: lib.rs
binparse-dsl/src/: ast.rs  lib.rs  main.rs  parser.rs
binparse-lsp/: Cargo.toml
binparse-lsp/src/: diagnostics.rs  main.rs  semantic_tokens.rs
binparse-protocols/: Cargo.toml  build.rs
binparse-protocols/specs/: bgp.bp  dhcp.bp  dns.bp  mqtt_v3.bp  mqtt_v5.bp  udp.bp
binparse-protocols/src/: hooks.rs  lib.rs
binparse-protocols/tests/: smoke.rs  writers.rs
binparse/src/: hooks.rs  lib.rs  tree.rs
bytesmith/: Cargo.toml
bytesmith-bench/: Cargo.toml
bytesmith-bench/benches/: dns.rs  mqtt.rs  network.rs  tls.rs
bytesmith-bench/comparison/: analyze_callgrind.sh  dns_bytesmith.rs
bytesmith-bench/src/: lib.rs
bytesmith-cli/: Cargo.toml
bytesmith-cli/src/: main.rs
bytesmith-codegen/: Cargo.toml
bytesmith-codegen/examples/: gen_stdin.rs  test.rs  tmp.rs
bytesmith-codegen/src/: attr.rs  expr.rs  field.rs  lib.rs  struct_.rs  writer.rs
bytesmith-codegen/src/tests/: arrays.rs  fields.rs  hooks.rs  layout.rs  mod.rs  structs.rs  unions.rs  writer.rs  writer_snapshots.rs
bytesmith-codegen/src/tests/snapshots/: bitfield_array.txt  bitfields.txt  cache_len_hook.txt  cache_len_value_hook.txt  cache_len_value_union.txt  cache_value_hook.txt  check_and_range.txt  concat.txt  conditional_fields.txt  conditional_hook.txt  constant_fields.txt  cross_byte_bitfield.txt  empty_struct.txt  endian_attributes.txt  expression_sized_array.txt  fixed_array.txt  fixed_hook.txt  greedy_rest_array.txt  len_bounded_greedy_array.txt  len_bounded_hook.txt  len_bounded_struct_ref.txt  len_bounded_union.txt  lsb_bit_order.txt  nested_structs.txt  padding_and_alignment.txt  signed_primitives.txt  simple_primitive.txt  skip_fields.txt  struct_level_len.txt  struct_level_len_fill_to_bound.txt  struct_ref_array.txt  union_error_variant.txt  union_single_discriminant.txt  union_tuple_discriminant_with_multiple_matchers.txt  until_array.txt  vla_hook.txt  writer_affine_dynamic_tail.txt  writer_align.txt  writer_bitfields.txt  writer_byte_array.txt  (+28 more)
bytesmith-codegen/src/type_/: array.rs  bitfield.rs  concat.rs  mod.rs  primitive.rs  struct_ref.rs  union_.rs
bytesmith-codegen/tests/: generated_runtime.rs  hook_integration.rs  pcap_dogfood.rs  protocol_suite.rs  writer_protocol_suite.rs  writer_runtime.rs
bytesmith-codegen/tests/snapshots/: dns.txt  ipv4_options.txt  ipv6.txt  tcp.txt
bytesmith-dsl/: Cargo.toml
bytesmith-dsl-parse/: Cargo.toml
bytesmith-dsl-parse/src/: lib.rs
bytesmith-dsl/src/: lib.rs
bytesmith-lsp/: Cargo.toml
bytesmith-lsp/src/: diagnostics.rs  main.rs  semantic_tokens.rs
bytesmith-protocols/: Cargo.toml  build.rs
bytesmith-protocols/specs/: arp.bsm  dns.bsm  ethernet.bsm  icmp.bsm  icmpv6.bsm  ip.bsm  mqtt_v3.bsm  mqtt_v5.bsm  sctp.bsm  tcp.bsm  tls.bsm  vlan.bsm
bytesmith-protocols/src/: hooks.rs  lib.rs
bytesmith-protocols/tests/: smoke.rs  writers.rs
docs/: cache-and-borrowed-hooks-spec.md  eager-parse-handoff.md  fuzzing-plan.md  writer-implementation-plan.md
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: generated_parsers.rs  generated_writers.rs
