[workspace]
resolver = "3"
members = [
    "binparse-dsl",
    "binparse-dsl-parse",
    "binparse-codegen",
    "binparse",
    "binparse-protocols",
    "binparse-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/abhikjain360/binparse2"
readme = "README.md"
license = "MIT OR Apache-2.0"
