[workspace]
resolver = "3"
members = [
    "bytesmith-dsl",
    "bytesmith-dsl-parse",
    "bytesmith-codegen",
    "bytesmith-cli",
    "bytesmith",
    "bytesmith-protocols",
    "bytesmith-bench",
    "bytesmith-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/abhikjain360/bytesmith"
readme = "README.md"
license = "MIT OR Apache-2.0"
