[package]
name = "binparse-bench"
version.workspace = true
edition.workspace = true
publish = false

[lib]
bench = false

[dependencies]
binparse = { path = "../binparse" }
binparse-protocols = { path = "../binparse-protocols", features = ["all"] }

[dev-dependencies]
criterion = "0.8"
etherparse = "0.20"
pnet_packet = "0.35"
mqttbytes = "0.6"
rumqttc_v4_next = { package = "rumqttc-v4-next", version = "0.33" }
rumqttc_v5_next = { package = "rumqttc-v5-next", version = "0.33" }
bytes = "1"
tls-parser = "0.12"
simple-dns = "0.11"

[[bench]]
name = "network"
harness = false

[[bench]]
name = "mqtt"
harness = false

[[bench]]
name = "tls"
harness = false

[[bench]]
name = "dns"
harness = false
