[package]
name = "binparse-cli"
description = "Command-line interface that compiles binparse DSL specs into Rust source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["binary", "parser", "codegen", "dsl", "cli"]
categories = ["parsing", "command-line-utilities"]

[[bin]]
name = "binparse-cli"
path = "src/main.rs"

[dependencies]
binparse-dsl-parse = { path = "../binparse-dsl-parse", version = "0.1.0" }
binparse-codegen = { path = "../binparse-codegen", version = "0.1.0" }

clap = { version = "4.5.60", features = ["derive"] }
