[package]
name = "binparse-codegen"
description = "Rust parser code generator for binparse DSL specs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
binparse = { path = "../binparse", version = "0.1.0" }
binparse-dsl = { path = "../binparse-dsl", version = "0.1.0" }

prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", default-features = false, features = ["parsing"] }
thiserror = "2.0.17"

[dev-dependencies]
binparse-dsl-parse = { path = "../binparse-dsl-parse" }
