[package]
name = "binparse-dsl-parse"
description = "Parser from binparse DSL source into the binparse-dsl AST with diagnostics"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
binparse-dsl = { path = "../binparse-dsl", version = "0.1.0" }
ariadne = "0.6.0"
winnow = { version = "0.7.14", features = ["simd"] }
thiserror = "2.0.17"

[lib]
path = "src/lib.rs"

[features]
debug = ["winnow/debug"]
