[package]
name = "binparse-lsp"
description = "Language server for the binparse DSL (diagnostics from the parser + codegen)"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
binparse-dsl = { path = "../binparse-dsl", version = "0.1.0" }
binparse-dsl-parse = { path = "../binparse-dsl-parse", version = "0.1.0" }
binparse-codegen = { path = "../binparse-codegen", version = "0.1.0" }

tower-lsp = "0.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
dashmap = "6"

[[bin]]
name = "binparse-lsp"
path = "src/main.rs"
