[package]
name = "bytesmith-dsl-parse"
description = "Parser from bytesmith DSL source into the bytesmith-dsl AST with diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["binary", "parser", "dsl", "codegen", "winnow"]
categories = ["parsing", "parser-implementations"]

[dependencies]
bytesmith-dsl = { path = "../bytesmith-dsl", version = "0.1.0" }
ariadne = "0.6.0"
winnow = { version = "0.7.14", features = ["simd"] }
thiserror = "2.0.17"

[lib]
path = "src/lib.rs"

[features]
debug = ["winnow/debug"]
