[package]
name = "bytesmith-dsl"
description = "AST definitions for the bytesmith DSL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["binary", "parser", "dsl", "ast", "codegen"]
categories = ["parsing", "parser-implementations"]

[lib]
path = "src/lib.rs"
