[package]
name = "bytesmith-lsp"
description = "Language server for the bytesmith DSL (diagnostics from the parser + codegen)"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytesmith-dsl = { path = "../bytesmith-dsl", version = "0.1.0" }
bytesmith-dsl-parse = { path = "../bytesmith-dsl-parse", version = "0.1.0" }
bytesmith-codegen = { path = "../bytesmith-codegen", version = "0.1.0" }

tower-lsp = "0.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
dashmap = "6"

[[bin]]
name = "bytesmith-lsp"
path = "src/main.rs"
