[package]
name = "bytesmith-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytesmith = { path = "../bytesmith" }

[build-dependencies]
bytesmith-codegen = { path = "../bytesmith-codegen" }
bytesmith-dsl-parse = { path = "../bytesmith-dsl-parse" }

[[bin]]
name = "generated_parsers"
path = "fuzz_targets/generated_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generated_writers"
path = "fuzz_targets/generated_writers.rs"
test = false
doc = false
bench = false

[workspace]
